# WebrtcApmCmake

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/webrtc/: Android.mk  CMakeLists.txt  empty.cpp.cpp
app/src/main/cpp/webrtc/base/: CMakeLists.txt
app/src/main/cpp/webrtc/common_audio/: CMakeLists.txt
app/src/main/cpp/webrtc/common_audio/resampler/: CMakeLists.txt
app/src/main/cpp/webrtc/common_audio/signal_processing/: CMakeLists.txt
app/src/main/cpp/webrtc/common_audio/vad/: CMakeLists.txt
app/src/main/cpp/webrtc/modules/audio_coding/codecs/: CMakeLists.txt
app/src/main/cpp/webrtc/modules/audio_coding/codecs/isac/main/source/: CMakeLists.txt
app/src/main/cpp/webrtc/modules/audio_device/android/java/src/org/webrtc/voiceengine/: BuildInfo.java  WebRtcAudioEffects.java  WebRtcAudioManager.java  WebRtcAudioRecord.java  WebRtcAudioTrack.java  WebRtcAudioUtils.java
app/src/main/cpp/webrtc/modules/audio_device/test/android/audio_device_android_test/src/org/webrtc/voiceengine/: AudioDeviceAndroid.java
app/src/main/cpp/webrtc/modules/audio_device/test/android/audio_device_android_test/src/org/webrtc/voiceengine/test/: AudioDeviceAndroidTest.java
app/src/main/cpp/webrtc/modules/audio_processing/: CMakeLists.txt
app/src/main/cpp/webrtc/modules/audio_processing/aec/: CMakeLists.txt
app/src/main/cpp/webrtc/modules/audio_processing/aecm/: CMakeLists.txt
app/src/main/cpp/webrtc/modules/audio_processing/agc/: CMakeLists.txt
app/src/main/cpp/webrtc/modules/audio_processing/beamformer/: CMakeLists.txt
app/src/main/cpp/webrtc/modules/audio_processing/intelligibility/: CMakeLists.txt
app/src/main/cpp/webrtc/modules/audio_processing/ns/: CMakeLists.txt
app/src/main/cpp/webrtc/modules/audio_processing/transient/: CMakeLists.txt
app/src/main/cpp/webrtc/modules/audio_processing/utility/: CMakeLists.txt
app/src/main/cpp/webrtc/modules/audio_processing/vad/: CMakeLists.txt
app/src/main/cpp/webrtc/system_wrappers/source/: CMakeLists.txt
app/src/main/java/me/cq/webrtccmake/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
